Fix flex wrap issue that overlaps reserves and events

--- a/Corpobello/styles/Reserve.module.css
+++ b/Corpobello/styles/Reserve.module.css
@@ -1,6 +1,5 @@
 .ReservesBg{
     width: 100%;
-    height: 100vh;
     background: url(https://images.unsplash.com/photo-1605528017351-8635bb3d6a3a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80);
     background-size: cover;
   }
